fixed mobile contact flex wrap

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -391,7 +391,9 @@ footer {
         }
     }
     .contact-main {
-        flex-wrap: wrap;
+        .wrapper {
+            flex-wrap: wrap;
+        }
         padding: 25px;
         p {
             width: 90%;
